k8s/manifests/service.yaml
---
# Source: setu-ts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: setu-setu-ts
  namespace: setu
  labels:
    helm.sh/chart: setu-ts-0.1.0
    app.kubernetes.io/name: setu-ts
    app.kubernetes.io/instance: setu
    app.kubernetes.io/version: "0.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: setu-ts
    app.kubernetes.io/instance: setu
